--- a/uniphynew/assets/css/theme.css
+++ b/uniphynew/assets/css/theme.css
@@ -25678,7 +25678,7 @@ text-align: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: linear-gradient(to bottom, #21325b, #21325b); 
+  background: rgba(245, 158, 11, 0.8); 
   box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
 }
 
