--- a/uniphynew/wp-content/themes/bridgecrew/assets/css/style540f.css
+++ b/uniphynew/wp-content/themes/bridgecrew/assets/css/style540f.css
@@ -1637,24 +1637,25 @@ form.hs-form .hs-error-msgs {
       text-decoration: underline; }
 
 .nav-to-select {
-  display: none; }
-  @media (max-width: 600px) {
+  display: none; 
+}
+  /* @media (max-width: 600px) {
     .nav-to-select {
-      display: block; } }
-@media (max-width: 600px) {
+      display: block; } } */
+/* @media (max-width: 600px) {
   .section-block__sidebar__inner .menu,
   .main-footer__widgets__column .menu {
-    display: none; } }
+    display: none; } } */
 
 /* class applies to select element itself, not a wrapper element */
-.nav-to-select {
+/* .nav-to-select {
   color: #403480;
   line-height: 1.3;
   padding: 5px 10px;
   width: 100%;
-  max-width: 100%;
+  max-width: 100%; */
   /* useful when width is set to anything other than 100% */
-  box-sizing: border-box;
+  /* box-sizing: border-box;
   margin: 0px;
   border: 1px solid #f6f9fe;
   box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
@@ -1662,51 +1663,51 @@ form.hs-form .hs-error-msgs {
   -moz-appearance: none;
   -webkit-appearance: none;
   appearance: none;
-  background-color: #fff;
+  background-color: #fff; */
   /* note: bg image below uses 2 urls. The first is an svg data uri for the arrow icon, and the second is the gradient. 
     for the icon, if you want to change the color, be sure to use `%23` instead of `#`, since it's a url. You can also swap in a different svg icon or an external image reference
     
   */
-  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient(to bottom, #ffffff 0%, #f6f9fe 100%);
-  background-repeat: no-repeat, repeat;
+  /* background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient(to bottom, #ffffff 0%, #f6f9fe 100%);
+  background-repeat: no-repeat, repeat; */
   /* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
-  background-position: right .7em top 50%, 0 0;
+  /* background-position: right .7em top 50%, 0 0; */
   /* icon size, then gradient */
-  background-size: .65em auto, 100%; }
+  /* background-size: .65em auto, 100%; } */
 
 /* Hide arrow icon in IE browsers */
-.nav-to-select::-ms-expand {
-  display: none; }
+/* .nav-to-select::-ms-expand {
+  display: none; } */
 
 /* Hover style */
-.nav-to-select:hover {
-  border-color: #888; }
+/* .nav-to-select:hover {
+  border-color: #888; } */
 
 /* Focus style */
-.nav-to-select:focus {
-  border-color: #aaa;
+/* .nav-to-select:focus {
+  border-color: #aaa; */
   /* It'd be nice to use -webkit-focus-ring-color here but it doesn't work on box-shadow */
-  box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+  /* box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
   box-shadow: 0 0 0 3px -moz-mac-focusring;
   color: #222;
-  outline: none; }
+  outline: none; } */
 
 /* Set options to normal weight */
-.nav-to-select option {
-  font-weight: normal; }
+/* .nav-to-select option {
+  font-weight: normal; } */
 
 /* Support for rtl text, explicit support for Arabic and Hebrew */
-*[dir="rtl"] .nav-to-select, :root:lang(ar) .nav-to-select, :root:lang(iw) .nav-to-select {
+/* *[dir="rtl"] .nav-to-select, :root:lang(ar) .nav-to-select, :root:lang(iw) .nav-to-select {
   background-position: left .7em top 50%, 0 0;
-  padding: .6em .8em .5em 1.4em; }
+  padding: .6em .8em .5em 1.4em; } */
 
 /* Disabled styles */
-.nav-to-select:disabled, .nav-to-select[aria-disabled=true] {
+/* .nav-to-select:disabled, .nav-to-select[aria-disabled=true] {
   color: graytext;
   background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22graytext%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%); }
 
 .nav-to-select:disabled:hover, .nav-to-select[aria-disabled=true] {
-  border-color: #aaa; }
+  border-color: #aaa; } */
 
 .section-block__pre-title-image {
   max-height: 60px;
