UN - updated based on review
Footer restructure, pricing page content apply, evalutation landscape image adjustment and alignment issue features card in home page.

--- a/uniphynew/assets/css/theme.css
+++ b/uniphynew/assets/css/theme.css
@@ -25678,7 +25678,7 @@ text-align: center;
 
 .swiper-slide {
   width: 300px;
-  height: 320px;
+  height: auto;
   filter: blur(1px);
   padding: 40px;
   border-radius: 10px;
