UN-resources redirection issue fix

--- a/uniphynew/assets/css/theme.css
+++ b/uniphynew/assets/css/theme.css
@@ -25150,7 +25150,7 @@ font-weight: bold;
 
     }
     .row{
-      display: block;
+      display: flex;
       margin-right: 0;
       margin-left: 0;
     }
